--- a/app_storefront_core/cartridge/static/default/css/style.css
+++ b/app_storefront_core/cartridge/static/default/css/style.css
@@ -1762,34 +1762,31 @@ input[type="button"] {
   width: 100%; }
 
 #wrapper {
-  background: none repeat scroll 0 0 #fff;
+  background-color: #fff;
+  border: 0;
   left: 0;
   margin: auto;
-  max-width: 960px;
+  max-width: 100%;
+  min-width: 320px;
   position: relative;
   -webkit-transition: left 0.2s ease-in;
           transition: left 0.2s ease-in;
-  width: 960px; }
+  width: 100%; }
+  @media screen and (min-width: 768px) {
+    #wrapper {
+      width: 760px; } }
+  @media screen and (min-width: 960px) {
+    #wrapper {
+      max-width: 960px;
+      width: 960px; } }
+  #wrapper.pt_storefront {
+    max-width: 100%;
+    width: 100%; }
   #wrapper.menu-active {
     left: 50%; }
   @media screen and (min-width: 768px) {
     #wrapper.menu-active {
       left: auto; } }
-  @media screen and (max-width: 767px) {
-    #wrapper {
-      border: 0;
-      max-width: 100%;
-      min-width: 320px;
-      width: 100%; } }
-  @media screen and (min-width: 768px) and (max-width: 959px) {
-    #wrapper {
-      width: 760px; } }
-  @media screen and (max-width: 480px) {
-    #wrapper.pt_gift-registry {
-      font-size: 12px; } }
-  #wrapper.pt_storefront {
-    max-width: 100%;
-    width: 100%; }
 
 .primary-content {
   border-left: 1px solid #e0e0e0;
@@ -2379,7 +2376,10 @@ div.error {
           max-width: 100%; } }
     #homepage-slides .slide .banner-message {
       position: absolute;
-      top: 2%; }
+      top: 10%; }
+      @media screen and (min-width: 768px) {
+        #homepage-slides .slide .banner-message {
+          top: 2%; } }
       #homepage-slides .slide .banner-message .banner-text1 {
         font-family: Lato, sans-serif;
         font-size: 2rem;
@@ -5455,7 +5455,7 @@ h1 .account-logout {
   clear: left; }
 
 .availability-web {
-  padding: 0 0 1em 0; }
+  padding-bottom: 1rem; }
   .availability-web label {
     float: none; }
   .availability-web p {
@@ -5467,13 +5467,13 @@ h1 .account-logout {
 .availability-storepickup .availability-instore,
 .availability-storepickup .availability-web {
   background-color: #e0e0e0;
-  padding: 1em; }
+  padding: 1rem; }
 
 .availability-storepickup .availability-web {
   float: none; }
 
 .availability-storepickup .availability-instore {
-  margin-bottom: 1.5em; }
+  margin-bottom: 1rem; }
 
 .in-stock-msg,
 .is-in-stock,
@@ -5491,26 +5491,18 @@ h1 .account-logout {
 .on-order,
 .preorder-msg,
 .backorder-msg {
-<<<<<<< HEAD
-  color: #00629b; }
-=======
   color: #008578;
   font-weight: 700; }
->>>>>>> fb647d80944c14e1927deb5ff68dbeab6e105408
-
-.availability-results {
-  margin-top: 1em; }
 
 #user-zip {
   display: block;
-  margin: 2em auto 0; }
+  margin: 1rem auto 0; }
 
 .store-list-container {
   margin: 0 auto;
   position: relative;
   overflow: hidden;
-  width: 565px;
-  width: calc(525px + 3em); }
+  width: 565px; }
 
 .store-list {
   list-style: none outside none;
@@ -5522,8 +5514,8 @@ h1 .account-logout {
   box-sizing: border-box;
   float: left;
   list-style: none outside none;
-  margin: 0.3em 0.5em;
-  padding: 0.8em;
+  margin: 0.3rem 0.4rem;
+  padding: 0.8rem;
   text-align: center;
   width: 175px; }
   .store-tile.selected {
@@ -5531,9 +5523,7 @@ h1 .account-logout {
   .store-tile .store-status {
     display: block;
     font-size: 0.9em;
-    margin: 5px 0; }
-  .store-tile .select-store-button {
-    margin-top: 1em; }
+    margin: 1rem 0; }
 
 .store-list-pdp-container {
   margin-top: 1em; }
